fix jitter scrolling by adopting css based overflow

--- a/packages/block-library/src/image/style.scss
+++ b/packages/block-library/src/image/style.scss
@@ -207,7 +207,7 @@
 
 	.lightbox-image-container {
 		position: absolute;
-		overflow: hidden;
+		// overflow: hidden;
 		top: 50%;
 		left: 50%;
 		transform-origin: top left;
